[package]
name = "mandelbrot_set"
version = "0.1.0"
edition = "2024"

[profile.dev.package."*"]
opt-level = 2

[dependencies]
wgpu = "27.0.0"
winit = { version = "0.30", features = ["android-native-activity"] }
env_logger = "0.10"
log = "0.4"
pollster = "0.3"
anyhow = "1.0"
bytemuck = { version = "1.24", features = [ "derive" ] }
cgmath = "0.18"
chrono = "0.4.43"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]